--- a/passwordManagementSystem/passwordSystemDashboard.html
+++ b/passwordManagementSystem/passwordSystemDashboard.html
@@ -8,20 +8,148 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body class="dashboard">
-  <div class="vault-container">
-    <h2>🔐 Your Password Vault</h2>
 
-    <form id="addPasswordForm">
-      <input type="text" id="siteName" placeholder="Site Name (e.g. Facebook)" required />
-      <input type="text" id="encryptedPassword" placeholder="Encrypted Password" required />
-      <button type="submit"><i class="fas fa-plus-circle"></i> Add Password</button>
-    </form>
+  <!-- Overlay background -->
+  <div class="overlay"></div>
 
-    <div id="passwordList" class="password-list">
-    
+  <!-- Header with profile dropdown -->
+  <header>
+    <div class="logo">🔐 WyserVault</div>
+    <div class="user-profile">
+      <img id="headerAvatar" class="avatar" src="avater.jpg" alt="User Avatar" />
+      <div class="info">
+        <span id="profileUsername"></span>
+        <span id="profileEmail"></span>
+      </div>
+
+      <!-- Profile dropdown menu -->
+      <div class="profile-dropdown" id="profileDropdown">
+        <div class="profile-section">
+          <label for="profilePic" class="pic-label">Upload Picture</label>
+          <input type="file" id="profilePic" accept="image/*" />
+        </div>
+
+        <div class="profile-info">
+          <p><strong>Name:</strong> <span id="dropdownName">Wyser</span></p>
+          <p><strong>Email:</strong> <span id="dropdownEmail">wyser@example.com</span></p>
+        </div>
+
+        <div class="profile-notes">
+          <label for="userNotes">Personal Notes</label>
+          <textarea id="userNotes" rows="3" placeholder="Write something about yourself..."></textarea>
+        </div>
+
+        <button id="editProfileBtn">✏️ Edit Profile</button>
+      </div>
+    </div>
+  </header>
+
+  <!-- Edit Profile Modal -->
+  <div id="editProfileModal" class="modal">
+    <div class="modal-content">
+      <span class="close-btn" id="closeModal">&times;</span>
+      <h3>Edit Profile</h3>
+
+       <!-- Profile Image Upload + Preview -->
+    <div class="image-section">
+      <label for="profileImageInput">Profile Picture</label>
+      <input type="file" id="profileImageInput" accept="image/*" />
+      <img id="profileImagePreview" src="avater.jpg" alt="Profile Preview" class="avatar-preview"/>
+    </div>
+
+          <!-- Profile Form -->
+      <form id="editProfileForm" enctype="multipart/form-data">
+        <label for="editName">Name</label>
+        <input type="text" id="editName" />
+
+        <label for="editEmail">Email</label>
+        <input type="email" id="editEmail" />
+
+        <label for="editNotes">Personal Notes</label>
+        <textarea id="editNotes" rows="3"></textarea>
+
+        <button type="submit">💾 Save Changes</button>
+      </form>
     </div>
   </div>
 
+  <!-- Vault container -->
+  <div class="vault-container">
+    <h2><i class="fas fa-lock"></i> Your Password Vault</h2>
+
+    <form id="addPasswordForm" class="vault-form">
+      <input type="text" id="siteName" placeholder="Site Name (e.g. Facebook)" required />
+      <input type="text" id="username" placeholder="Username (or, Email)" required />
+      <input type="text" id="password" placeholder="🔐 Password" required />
+      <button type="submit"><i class="fas fa-plus-circle"></i> Add Password</button>
+    </form>
+
+    <button id="logoutBtn">
+      <i class="fas fa-sign-out-alt"></i> Logout
+    </button>
+
+    <div id="passwordList" class="password-list">
+      <!-- Password entries will be injected here -->
+    </div>
+  </div>
+
+  <!-- Full profile card -->
+   <div id="userProfile" class="profile-card">
+  <p>
+    <i class="fas fa-id-badge"></i>
+    <span class="user-id-label">User ID:</span>
+    <span id="profileUserId" class="user-id-value"></span>
+  </p>
+</div>
+
+  <div id="editPasswordModal" class="modal">
+  <div class="modal-content">
+    <span class="close-btn" onclick="closeEditModal()">&times;</span>
+    <h3>Edit Password</h3>
+    <form id="editPasswordForm">
+      <input type="text" id="editSiteName" placeholder="Site Name" required />
+      <input type="text" id="editUsername" placeholder="Username" required />
+      <input type="text" id="editRawPassword" placeholder="New Password" required />
+      <button type="submit">Update</button>
+    </form>
+  </div>
+</div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
   <script src="passwordSystemDashboard.js"></script>
+
+  <script>
+    // Toggle profile dropdown
+    const profileToggle = document.querySelector(".user-profile");
+    const dropdown = document.getElementById("profileDropdown");
+
+    profileToggle.addEventListener("click", () => {
+      dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
+    });
+
+    // Inject user info
+    const user = JSON.parse(localStorage.getItem("user"));
+    if (user) {
+      // Dropdown info
+      document.getElementById("dropdownName").textContent = user.username;
+      document.getElementById("dropdownEmail").textContent = user.email || "No email";
+
+      // Header info
+      const usernameEl = document.getElementById("profileUsername");
+      const emailEl = document.getElementById("profileEmail");
+      const avatarEl = document.querySelector(".avatar");
+
+      if (usernameEl) usernameEl.textContent = user.username;
+      if (emailEl) emailEl.textContent = user.email || "No email";
+      if (avatarEl) avatarEl.textContent = user.username.charAt(0).toUpperCase();
+
+      // Full profile card
+      const userIdEl = document.getElementById("profileUserId");
+      if (userIdEl) userIdEl.textContent = user.userId;
+    } else {
+      alert("Please login first");
+      window.location.href = "passwordSystemLogin.html";
+    }
+  </script>
 </body>
 </html>
