--- a/passwordManagementSystem/passwordSystemRegister.html
+++ b/passwordManagementSystem/passwordSystemRegister.html
@@ -13,7 +13,7 @@
       <form id="registerForm">
         <input type="text" id="regUsername" placeholder="Username" required />
         <input type="email" id="regEmail" placeholder="Email" required />
-        <input type="password" id="regPassword" placeholder="Password" required />
+        <input type="password" id="regPassword" placeholder="🔐 Strong Password" required />
         <button type="submit">Register</button>
       </form>
       <p id="regErrorMsg"></p>
