--- a/passwordManagementSystem/passwordSystemLogin.html
+++ b/passwordManagementSystem/passwordSystemLogin.html
@@ -9,8 +9,8 @@
 <body>
   <div class="container">
     <div class="login-card">
-      <h2>🔐 Welcome Back, Wyser</h2>
-      <form id="loginForm">
+      <h2>🔐 Welcome Back</h2>
+      <form id="loginForm" method="POST">
         <input type="text" id="username" placeholder="Username" required />
         <input type="password" id="password" placeholder="Password" required />
         <button type="submit">Login</button>
@@ -18,6 +18,9 @@
       </form>
       <p id="errorMsg"></p>
     </div>
+    <a href="signInPage.html" class="back-arrow">
+  &#8592; Back to Welcome page
+</a>
   </div>
 
   <script src="passwordSystemLogin.js"></script>
